update pt