@@ -30,37 +30,56 @@ import java.util.Iterator;
 /**
  * This provides static methods to convert an XML text into a JSONObject,
  * and to covert a JSONObject into an XML text.
+ *
  * @author JSON.org
  * @version 2012-10-26
  */
 public class XML {
 
-    /** The Character '&amp;'. */
-    public static final Character AMP   = new Character('&');
+    /**
+     * The Character '&amp;'.
+     */
+    public static final Character AMP = Character.valueOf('&');
 
-    /** The Character '''. */
-    public static final Character APOS  = new Character('\'');
+    /**
+     * The Character '''.
+     */
+    public static final Character APOS = Character.valueOf('\'');
 
-    /** The Character '!'. */
-    public static final Character BANG  = new Character('!');
+    /**
+     * The Character '!'.
+     */
+    public static final Character BANG = Character.valueOf('!');
 
-    /** The Character '='. */
-    public static final Character EQ    = new Character('=');
+    /**
+     * The Character '='.
+     */
+    public static final Character EQ = Character.valueOf('=');
 
-    /** The Character '>'. */
-    public static final Character GT    = new Character('>');
+    /**
+     * The Character '>'.
+     */
+    public static final Character GT = Character.valueOf('>');
 
-    /** The Character '&lt;'. */
-    public static final Character LT    = new Character('<');
+    /**
+     * The Character '&lt;'.
+     */
+    public static final Character LT = Character.valueOf('<');
 
-    /** The Character '?'. */
-    public static final Character QUEST = new Character('?');
+    /**
+     * The Character '?'.
+     */
+    public static final Character QUEST = Character.valueOf('?');
 
-    /** The Character '"'. */
-    public static final Character QUOT  = new Character('"');
+    /**
+     * The Character '"'.
+     */
+    public static final Character QUOT = Character.valueOf('"');
 
-    /** The Character '/'. */
-    public static final Character SLASH = new Character('/');
+    /**
+     * The Character '/'.
+     */
+    public static final Character SLASH = Character.valueOf('/');
 
     /**
      * Replace special characters with XML escapes:
@@ -70,6 +89,7 @@ public class XML {
      * &gt; <small>(greater than)</small> is replaced by &amp;gt;
      * &quot; <small>(double quote)</small> is replaced by &amp;quot;
      * </pre>
+     *
      * @param string The string to be escaped.
      * @return The escaped string.
      */
@@ -78,23 +98,23 @@ public class XML {
         for (int i = 0, length = string.length(); i < length; i++) {
             char c = string.charAt(i);
             switch (c) {
-            case '&':
-                sb.append("&amp;");
-                break;
-            case '<':
-                sb.append("&lt;");
-                break;
-            case '>':
-                sb.append("&gt;");
-                break;
-            case '"':
-                sb.append("&quot;");
-                break;
-            case '\'':
-                sb.append("&apos;");
-                break;
-            default:
-                sb.append(c);
+                case '&':
+                    sb.append("&amp;");
+                    break;
+                case '<':
+                    sb.append("&lt;");
+                    break;
+                case '>':
+                    sb.append("&gt;");
+                    break;
+                case '"':
+                    sb.append("&quot;");
+                    break;
+                case '\'':
+                    sb.append("&apos;");
+                    break;
+                default:
+                    sb.append(c);
             }
         }
         return sb.toString();
@@ -103,6 +123,7 @@ public class XML {
     /**
      * Throw an exception if the string contains whitespace.
      * Whitespace is not allowed in tagNames and attributes.
+     *
      * @param string
      * @throws JSONException
      */
@@ -121,6 +142,7 @@ public class XML {
 
     /**
      * Scan the content following the named tag, attaching it to the context.
+     *
      * @param x       The XMLTokener containing the source string.
      * @param context The JSONObject that will include the new material.
      * @param name    The tag name.
@@ -129,12 +151,12 @@ public class XML {
      */
     private static boolean parse(XMLTokener x, JSONObject context,
                                  String name) throws JSONException {
-        char       c;
-        int        i;
+        char c;
+        int i;
         JSONObject jsonobject = null;
-        String     string;
-        String     tagName;
-        Object     token;
+        String string;
+        String tagName;
+        Object token;
 
 // Test for and skip past these forms:
 //      <!-- ... -->
@@ -211,10 +233,10 @@ public class XML {
 // Open tag <
 
         } else {
-            tagName = (String)token;
+            tagName = (String) token;
             token = null;
             jsonobject = new JSONObject();
-            for (;;) {
+            for (; ; ) {
                 if (token == null) {
                     token = x.nextToken();
                 }
@@ -222,7 +244,7 @@ public class XML {
 // attribute = value
 
                 if (token instanceof String) {
-                    string = (String)token;
+                    string = (String) token;
                     token = x.nextToken();
                     if (token == EQ) {
                         token = x.nextToken();
@@ -230,7 +252,7 @@ public class XML {
                             throw x.syntaxError("Missing value");
                         }
                         jsonobject.accumulate(string,
-                                XML.stringToValue((String)token));
+                                XML.stringToValue((String) token));
                         token = null;
                     } else {
                         jsonobject.accumulate(string, "");
@@ -252,7 +274,7 @@ public class XML {
 // Content, between <...> and </...>
 
                 } else if (token == GT) {
-                    for (;;) {
+                    for (; ; ) {
                         token = x.nextContent();
                         if (token == null) {
                             if (tagName != null) {
@@ -260,7 +282,7 @@ public class XML {
                             }
                             return false;
                         } else if (token instanceof String) {
-                            string = (String)token;
+                            string = (String) token;
                             if (string.length() > 0) {
                                 jsonobject.accumulate("content",
                                         XML.stringToValue(string));
@@ -273,7 +295,7 @@ public class XML {
                                 if (jsonobject.length() == 0) {
                                     context.accumulate(tagName, "");
                                 } else if (jsonobject.length() == 1 &&
-                                       jsonobject.opt("content") != null) {
+                                        jsonobject.opt("content") != null) {
                                     context.accumulate(tagName,
                                             jsonobject.opt("content"));
                                 } else {
@@ -297,6 +319,7 @@ public class XML {
      * JSONObject.stringToValue, especially because it does not attempt to
      * convert plus forms, octal forms, hex forms, or E forms lacking decimal
      * points.
+     *
      * @param string A String.
      * @return A simple JSON value.
      */
@@ -314,7 +337,7 @@ public class XML {
             return JSONObject.NULL;
         }
         if ("0".equals(string)) {
-            return new Integer(0);
+            return Integer.valueOf(0);
         }
 
 // If it might be a number, try converting it. If that doesn't work,
@@ -334,15 +357,15 @@ public class XML {
                 if (string.indexOf('.') >= 0) {
                     return Double.valueOf(string);
                 } else if (string.indexOf('e') < 0 && string.indexOf('E') < 0) {
-                    Long myLong = new Long(string);
+                    Long myLong = Long.valueOf(string);
                     if (myLong.longValue() == myLong.intValue()) {
-                        return new Integer(myLong.intValue());
+                        return Integer.valueOf(myLong.intValue());
                     } else {
                         return myLong;
                     }
                 }
             }
-        }  catch (Exception ignore) {
+        } catch (Exception ignore) {
         }
         return string;
     }
@@ -358,6 +381,7 @@ public class XML {
      * Sequences of similar elements are represented as JSONArrays. Content
      * text may be placed in a "content" member. Comments, prologs, DTDs, and
      * <code>&lt;[ [ ]]></code> are ignored.
+     *
      * @param string The source string.
      * @return A JSONObject containing the structured data from the XML string.
      * @throws JSONException
@@ -374,9 +398,10 @@ public class XML {
 
     /**
      * Convert a JSONObject into a well-formed, element-normal XML string.
+     *
      * @param object A JSONObject.
-     * @return  A string.
-     * @throws  JSONException
+     * @return A string.
+     * @throws JSONException
      */
     public static String toString(Object object) throws JSONException {
         return toString(object, null);
@@ -385,7 +410,8 @@ public class XML {
 
     /**
      * Convert a JSONObject into a well-formed, element-normal XML string.
-     * @param object A JSONObject.
+     *
+     * @param object  A JSONObject.
      * @param tagName The optional name of the enclosing tag.
      * @return A string.
      * @throws JSONException
@@ -393,14 +419,14 @@ public class XML {
     public static String toString(Object object, String tagName)
             throws JSONException {
         StringBuffer sb = new StringBuffer();
-        int          i;
-        JSONArray    ja;
-        JSONObject   jo;
-        String       key;
-        Iterator     keys;
-        int          length;
-        String       string;
-        Object       value;
+        int i;
+        JSONArray ja;
+        JSONObject jo;
+        String key;
+        Iterator keys;
+        int length;
+        String string;
+        Object value;
         if (object instanceof JSONObject) {
 
 // Emit <tagName>
@@ -413,7 +439,7 @@ public class XML {
 
 // Loop thru the keys.
 
-            jo = (JSONObject)object;
+            jo = (JSONObject) object;
             keys = jo.keys();
             while (keys.hasNext()) {
                 key = keys.next().toString();
@@ -422,7 +448,7 @@ public class XML {
                     value = "";
                 }
                 if (value instanceof String) {
-                    string = (String)value;
+                    string = (String) value;
                 } else {
                     string = null;
                 }
@@ -431,7 +457,7 @@ public class XML {
 
                 if ("content".equals(key)) {
                     if (value instanceof JSONArray) {
-                        ja = (JSONArray)value;
+                        ja = (JSONArray) value;
                         length = ja.length();
                         for (i = 0; i < length; i += 1) {
                             if (i > 0) {
@@ -446,7 +472,7 @@ public class XML {
 // Emit an array of similar keys
 
                 } else if (value instanceof JSONArray) {
-                    ja = (JSONArray)value;
+                    ja = (JSONArray) value;
                     length = ja.length();
                     for (i = 0; i < length; i += 1) {
                         value = ja.get(i);
@@ -491,7 +517,7 @@ public class XML {
                 object = new JSONArray(object);
             }
             if (object instanceof JSONArray) {
-                ja = (JSONArray)object;
+                ja = (JSONArray) object;
                 length = ja.length();
                 for (i = 0; i < length; i += 1) {
                     sb.append(toString(ja.opt(i), tagName == null ? "array" : tagName));
@@ -500,8 +526,8 @@ public class XML {
             } else {
                 string = (object == null) ? "null" : escape(object.toString());
                 return (tagName == null) ? "\"" + string + "\"" :
-                    (string.length() == 0) ? "<" + tagName + "/>" :
-                    "<" + tagName + ">" + string + "</" + tagName + ">";
+                        (string.length() == 0) ? "<" + tagName + "/>" :
+                                "<" + tagName + ">" + string + "</" + tagName + ">";
             }
         }
     }
